--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "webpack-dev-server": "^3.3.1"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.4.4",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-router-dom": "^5.0.0"
+    "react-router-dom": "^5.0.0",
+    "superagent": "^5.0.5"
   }
 }
