--- a/projects.json
+++ b/projects.json
@@ -11,21 +11,28 @@
         "name": "SashaMaps",
         "url": "https://github.com/a-vorontsov/SashaMaps",
         "technologies": ["React-Native", "GoogleMaps API", "Node.js"],
-        "image": "https://raw.githubusercontent.com/a-vorontsov/SashaMaps/master/SashaMaps_Logo/web_hi_res_512.png",
+        "image": "/public/images/sashamaps.png",
         "desc": "Android App"
     },
     {
         "name": "Receiptful",
         "url": "https://github.com/a-vorontsov/Receiptful",
-        "technologies": ["React", "Google Cloud Vision API", "Node.js"],
-        "image": "https://raw.githubusercontent.com/a-vorontsov/SashaMaps/master/SashaMaps_Logo/web_hi_res_512.png",
+        "technologies": ["React", "Google Cloud Vision API", "Node.js", "express"],
+        "image": "/public/images/receiptful.png",
         "desc": "Web App"
+    },
+    {
+        "name": "IllustrAIte",
+        "url": "https://github.com/a-vorontsov/IllustrAIte-Front-End",
+        "technologies": ["React", "Node.js"],
+        "image": "/public/images/illustraite.jpg",
+        "desc": "Web App/Game"
     },
     {
         "name": "FilmSpottr",
         "url": "https://github.com/a-vorontsov/FilmSpottr",
         "technologies": ["React", "GoogleMaps API", "Python", "IMDB"],
-        "image": "https://raw.githubusercontent.com/a-vorontsov/SashaMaps/master/SashaMaps_Logo/web_hi_res_512.png",
+        "image": "/public/images/filmspottr.png",
         "desc": "Web App"
     },
     {
@@ -39,21 +46,21 @@
         "name": "Particle",
         "url": "https://github.com/a-vorontsov/Particle",
         "technologies": ["C#", "Unity"],
-        "image": "https://raw.githubusercontent.com/a-vorontsov/SashaMaps/master/SashaMaps_Logo/web_hi_res_512.png",
+        "image": "/public/images/particle.png",
         "desc": "Desktop Game"
     },
     {
         "name": "RockPaperSplat-web",
         "url": "https://github.com/a-vorontsov/rockpapersplat-web",
         "technologies": ["HTML Canvas", "JavaScript"],
-        "image": "https://raw.githubusercontent.com/a-vorontsov/SashaMaps/master/SashaMaps_Logo/web_hi_res_512.png",
-        "desc": "Website"
+        "image": "/public/images/rps.png",
+        "desc": "Web Page"
     },
     {
         "name": "GoLink",
         "url": "https://github.com/a-vorontsov/golink",
-        "technologies": ["angular", "Google Firebase", "Ionic", "Cordova"],
-        "image": "https://raw.githubusercontent.com/a-vorontsov/SashaMaps/master/SashaMaps_Logo/web_hi_res_512.png",
+        "technologies": ["AngularJS", "Google Firebase", "Ionic", "Cordova"],
+        "image": "/public/images/golink.png",
         "desc": "Mobile App"
     }
 ]
