--- a/projects.json
+++ b/projects.json
@@ -2,7 +2,7 @@
     {
         "name": "git-gud",
         "url": "https://github.com/a-vorontsov/git-gud",
-        "weburl": "https://git-gud.org",
+        "weburl": "https://git-gud.vorontsov.co.uk",
         "technologies": ["golang", "StackExchange API"],
         "image": "/public/images/git-gud.png",
         "desc": "CLI tool"
@@ -31,6 +31,7 @@
     {
         "name": "FilmSpottr",
         "url": "https://github.com/a-vorontsov/FilmSpottr",
+        "weburl": "https://filmspottr.vorontsov.co.uk",
         "technologies": ["React", "GoogleMaps API", "Python", "IMDB"],
         "image": "/public/images/filmspottr.png",
         "desc": "Web App"
@@ -38,6 +39,7 @@
     {
         "name": "Shirt-or-not-Shirt",
         "url": "https://github.com/a-vorontsov/shirt-or-not-shirt",
+        "weburl": "https://ichack.vorontsov.co.uk",
         "technologies": ["React", "Microsoft Azure Cloud Vision API", "Node.js"],
         "image": "/public/images/shirt-or-not-shirt.png",
         "desc": "Web App"
@@ -52,6 +54,7 @@
     {
         "name": "RockPaperSplat-web",
         "url": "https://github.com/a-vorontsov/rockpapersplat-web",
+        "weburl": "https://rockpapersplat.vorontsov.co.uk",
         "technologies": ["HTML Canvas", "JavaScript"],
         "image": "/public/images/rps.png",
         "desc": "Web Page"
