--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "a-vorontsov webpage",
   "main": "src/index.js",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -b master -d build",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack-dev-server --config webpack.dev.js",
     "build": "webpack -p"
@@ -17,7 +19,7 @@
   "bugs": {
     "url": "https://github.com/a-vorontsov/a-vorontsov.github.io/issues"
   },
-  "homepage": "https://github.com/a-vorontsov/a-vorontsov.github.io#readme",
+  "homepage": "https://vorontsov.co.uk",
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
@@ -30,6 +32,7 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.4.4",
+    "gh-pages": "^2.0.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.0",
