Fix git-gud link

--- a/projects.json
+++ b/projects.json
@@ -2,7 +2,7 @@
     {
         "name": "git-gud",
         "url": "https://github.com/a-vorontsov/git-gud",
-        "weburl": "https://git-gud.vorontsov.co.uk",
+        "weburl": "http://git-gud.vorontsov.co.uk/",
         "technologies": ["golang", "StackExchange API"],
         "image": "/public/images/git-gud.png",
         "desc": "CLI tool"
