--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,17 @@
-**/.DS_Store
-**/.idea/
-**/node_modules/
-**/.vscode/
+/node_modules
+/.pnp
+.pnp.js
+
+# production
+/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
