--- a/package.json
+++ b/package.json
@@ -3,36 +3,50 @@
   "version": "1.0.0",
   "description": "a-vorontsov webpage",
   "main": "src/index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server --config webpack.dev.js",
-    "build": "webpack -p"
-  },
+  "private": false,
   "repository": {
     "type": "git",
     "url": "git+https://github.com/a-vorontsov/a-vorontsov.github.io.git"
   },
-  "author": "Aleksandr Vorontsov",
-  "license": "ISC",
   "bugs": {
     "url": "https://github.com/a-vorontsov/a-vorontsov.github.io/issues"
   },
+  "license": "ISC",
   "homepage": "https://vorontsov.co.uk",
-  "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.5",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
-    "terser-webpack-plugin": "^2.3.4",
-    "webpack": "^4.31.0",
-    "webpack-cli": "^3.3.2",
-    "webpack-dev-server": "^3.3.1"
-  },
   "dependencies": {
-    "@babel/polyfill": "^7.4.4",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-router-dom": "^5.0.0",
-    "superagent": "^5.0.5"
+    "@reach/router": "^1.3.4",
+    "gh-pages": "^3.1.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-scripts": "3.4.1",
+    "superagent": "^5.3.1"
+  },
+  "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -b master -d build",
+    "start": "BROWSER=none react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "devDependencies": {},
+  "reactSnap": {
+    "inlineCss": true,
+    "fixWebpackChunksIssue": false
   }
 }
