--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -16,6 +16,9 @@ jobs:
       uses: actions/setup-node@v2
       with:
         node-version: '14.x'
+    - run: git config user.name "Aleksandr Vorontsov" && git config user.email "aleksandr@vorontsov.co.uk"
     - run: npm ci
     - run: npm run predeploy
     - run: npm run deploy
+    env:
+      GH_TOKEN: ${{secrets.SECRET_GITHUB_TOKEN}}
