--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -18,8 +18,8 @@ jobs:
         node-version: '14.x'
     - run: git config user.name "Aleksandr Vorontsov" && git config user.email "aleksandr@vorontsov.co.uk"
     - run: npm ci
+    - run: cp ./CNAME public/
     - run: npm run predeploy
-    - run: echo "vorontsov.co.uk" > build/CNAME
     - run: npm run deploy
     env:
       GH_TOKEN: ${{secrets.SECRET_GITHUB_TOKEN}}
