--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "a-vorontsov.github.io",
   "version": "1.0.0",
   "description": "a-vorontsov webpage",
-  "main": "src/index.js",
   "private": false,
   "repository": {
     "type": "git",
@@ -13,40 +12,7 @@
   },
   "license": "ISC",
   "homepage": "https://vorontsov.co.uk",
-  "dependencies": {
-    "@reach/router": "^1.3.4",
-    "gh-pages": "^3.1.0",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1",
-    "superagent": "^5.3.1"
-  },
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build -r https://$GH_TOKEN@github.com/a-vorontsov/a-vorontsov.github.io.git",
-    "start": "BROWSER=none react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {},
-  "reactSnap": {
-    "inlineCss": true,
-    "fixWebpackChunksIssue": false
+    "deploy": "gh-pages -d public -r https://$GH_TOKEN@github.com/a-vorontsov/a-vorontsov.github.io.git"
   }
 }
