--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "type": "git",
     "url": "git+https://github.com/a-vorontsov/a-vorontsov.github.io.git"
   },
+  "dependencies": {
+    "gh-pages": "^3.1.0"
+  },
   "bugs": {
     "url": "https://github.com/a-vorontsov/a-vorontsov.github.io/issues"
   },
