--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -19,6 +19,7 @@ jobs:
     - run: git config user.name "Aleksandr Vorontsov" && git config user.email "aleksandr@vorontsov.co.uk"
     - run: npm ci
     - run: cp ./CNAME public/
+    - run: npm start
     - run: npm run deploy
     env:
       GH_TOKEN: ${{secrets.SECRET_GITHUB_TOKEN}}
