--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "url": "git+https://github.com/a-vorontsov/a-vorontsov.github.io.git"
   },
   "dependencies": {
-    "gh-pages": "^3.1.0"
+    "ejs": "^3.1.6",
+    "gh-pages": "^3.1.0",
+    "html-minifier": "^4.0.0"
   },
   "bugs": {
     "url": "https://github.com/a-vorontsov/a-vorontsov.github.io/issues"
@@ -16,6 +18,7 @@
   "license": "ISC",
   "homepage": "https://vorontsov.co.uk",
   "scripts": {
+    "start": "node index.js",
     "deploy": "gh-pages -d public -r https://$GH_TOKEN@github.com/a-vorontsov/a-vorontsov.github.io.git"
   }
 }
