--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "url": "git+https://github.com/a-vorontsov/a-vorontsov.github.io.git"
   },
   "dependencies": {
+    "clean-css": "^5.3.3",
     "ejs": "^3.1.6",
     "gh-pages": "^3.1.0",
     "html-minifier": "^4.0.0"
